--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,8 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
-
+        "livewire/livewire": "^3.5",
         "munafio/chatify": "^1.6"
-
-        "livewire/livewire": "^3.5"
-
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
